# pop-launcher-plugins

./: .gitignore  README.md  install.sh
1pt.one/: go.mod  main.go  plugin.ron
1pt.one/pop/: pop.go
1pt.one/shortener/: shortener.go
google-translate/: Cargo.toml  plugin.ron
google-translate/src/: config.rs  main.rs  plugin.rs
quick-ask-chatgpt/: config.json  go.mod  go.sum  main.go  plugin.ron
quick-ask-chatgpt/ai/: ai.go
quick-ask-chatgpt/pop/: pop.go
quick-ask-chatgpt/utils/: utils.go
todoist/: config.json  package-lock.json  package.json  plugin.ron  tsconfig.json
todoist/src/: index.ts  todoist.ts  utils.ts
vscode-open-recent/: config.json  package-lock.json  package.json  plugin.ron  tsup.config.json
vscode-open-recent/src/: index.ts  pop.ts  utils.ts  vscode.ts
whatis/: plugin.ron  whatis.py
