[package]
name = "pop-launcher-google-translate"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pop-launcher-toolkit = { git = "https://github.com/oknozor/launcher" }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread"] }
reqwest = { version = "0.11.18", features = ["json"]}

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
